Modernizer fixes